// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/audioItems/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "audioURL": "https://www.metalmondays.com/1.mp3",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
  "lengthMilliseconds": 20000,
  "mimeType": "audio/mpeg",
  "name": {
    "items": [
      {
        "languageCode": "eng",
        "role": "original",
        "text": "The Wooden Boy",
      },
    ],
  },
  "tags": [],
  "text": "[12000] [JHC] {eng}: There once was a little wooden boy. [15550]
[18300] [JHC] {eng}: His name was Pinocchio [19240]",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/bibliographicReferences/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "data": {
    "abstract": "This is the abstract, NOT a general note!",
    "creators": [
      {
        "name": "Alana Duvernay",
        "type": "author",
      },
    ],
    "isbn": "978-1-895811-34-6",
    "numberOfPages": 455,
    "place": "Kennebunk Port, Maine",
    "publisher": "Atlantic Publishing",
    "title": "A Day in the Life",
    "type": "book",
    "url": "https://atlanticpublishing.com",
    "year": 1999,
  },
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "label": "animals",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "bibliographicReference",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
          "type": "video",
        },
      ],
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/books/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "author": "John Doeburg",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
  "pages": [
    {
      "identifier": "1",
      "text": "foo",
      "translation": "dee foo",
    },
    {
      "identifier": "2",
      "text": "blah blah blah",
      "translation": "blahas",
    },
  ],
  "publicationDate": "2002",
  "subtitle": "The wolf's revenge",
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "plants",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
          "type": "note",
        },
      ],
    },
  ],
  "title": "Three Little Pigs",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/mediaItems/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "lengthMilliseconds": 2500,
  "mimeType": "audio/mpeg",
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
      "label": "legends",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "mediaItem",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "song",
        },
      ],
    },
  ],
  "title": "episode title (in language)",
  "titleEnglish": "Metal Mondays episode 1",
  "url": "https://www.metalmondays.com/1.mp3",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/photographs/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
  "imageURL": "https://www.mysound.org/downloads/Adiitsii-Running.png",
  "photographer": "Susie McRealart",
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "label": "placenames",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
          "type": "photograph",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
          "type": "audioItem",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112003",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "type": "note",
        },
      ],
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/playlists/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "episodes": [
    "audioItem/9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
  ],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
  "name": {
    "items": [
      {
        "languageCode": "clc",
        "role": "original",
        "text": "Blake's jams",
      },
    ],
  },
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
      "label": "law",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "type": "bibliographicReference",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
          "type": "playlist",
        },
      ],
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/songs/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "audioURL": "https://www.myaudio.com/lamb.mp3",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "lengthMilliseconds": 3500,
  "lyrics": "Mary had a little lamb, little lamb.",
  "startMilliseconds": 0,
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
      "label": "legends",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "mediaItem",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "song",
        },
      ],
    },
  ],
  "title": "Song title in language",
  "titleEnglish": "Mary had a little lamb",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/spatialFeatures/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "geometry": {
    "coordinates": [
      54.034404852745006,
      -132.17563335558532,
    ],
    "type": "Point",
  },
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
  "properties": {
    "description": "Description for point 100",
    "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
    "name": "Name of Point with ID: 100",
  },
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "plants",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
          "type": "note",
        },
      ],
    },
  ],
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/terms/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "contributor": "",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "tags": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "plants",
      "members": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "term",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
          "type": "book",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "type": "vocabularyList",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
          "type": "spatialFeature",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
          "type": "note",
        },
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
          "type": "note",
        },
      ],
    },
  ],
  "term": "Chil-term-1",
  "termEnglish": "Engl-term-1",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/videos/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110223",
  "lengthMilliseconds": 20000,
  "mimeType": "video/mp4",
  "name": {
    "items": [
      {
        "languageCode": "eng",
        "role": "original",
        "text": "The Demonstration",
      },
    ],
  },
  "tags": [],
  "text": "[12000] [DM] {eng}: This is how. [15550]
[18300] [DM] {eng}: It is done [19240]",
  "videoUrl": "https://be.tsilhqotinlanguage.ca:3003/download?id=3028_6d3b2a922b.mp4",
}
`;

exports[`GET  (fetch view models) When querying for a single View Model by ID GET /resources/vocabularyLists/:id when the resource is published when an resource with the id is found should return the expected response 1`] = `
{
  "actions": [],
  "entries": [
    {
      "term": {
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
        "term": "I am singing (lang)",
        "termEnglish": "I am singing (Engl)",
      },
      "variableValues": {
        "person": "11",
        "positive": true,
      },
    },
    {
      "term": {
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
        "term": "You are singing (lang)",
        "termEnglish": "You are singing (Engl)",
      },
      "variableValues": {
        "person": "12",
        "positive": false,
      },
    },
    {
      "term": {
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
        "term": "She is singing (lang)",
        "termEnglish": "She is singing (Engl)",
      },
      "variableValues": {
        "person": "13",
        "positive": false,
      },
    },
    {
      "term": {
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
        "term": "I am not singing (lang)",
        "termEnglish": "I am not singing (Engl)",
      },
      "variableValues": {
        "person": "01",
        "positive": true,
      },
    },
    {
      "term": {
        "contributor": "",
        "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
        "term": "You are not singing (lang)",
        "termEnglish": "You are not singing (Engl)",
      },
      "variableValues": {
        "person": "02",
        "positive": false,
      },
    },
  ],
  "form": {
    "fields": [
      {
        "constraints": [],
        "description": "choose positive",
        "label": "positive",
        "name": "positive",
        "options": [
          {
            "display": "negative (lha)",
            "value": false,
          },
          {
            "display": "positive form (switch for negative)",
            "value": true,
          },
        ],
        "type": "SWITCH",
      },
      {
        "constraints": [],
        "description": "choose person",
        "label": "person",
        "name": "person",
        "options": [
          {
            "display": "I",
            "value": "1",
          },
          {
            "display": "You",
            "value": "2",
          },
          {
            "display": "She",
            "value": "3",
          },
        ],
        "type": "STATIC_SELECT",
      },
    ],
  },
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b114567",
  "name": "To Sing (lang)",
  "nameEnglish": "To Sing (Engl)",
  "tags": [],
}
`;
